# mbt

./: .dockerignore  .gitignore  BLUEPRINT.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PLAN.md  README.md  TODO.md  pyproject.toml
examples/telecom-churn/: README.md  mlflow.db  predictions.csv  profiles.yaml  pyproject.toml
examples/telecom-churn/includes/: telecom_schema.yaml
examples/telecom-churn/local_artifacts/run_20260216_090332/split_data/: train_set
examples/telecom-churn/local_artifacts/run_20260216_090403/split_data/: test_set
examples/telecom-churn/local_artifacts/run_20260216_090455/load_data/: raw_data
examples/telecom-churn/local_artifacts/run_20260216_090519/evaluate/: eval_metrics
examples/telecom-churn/local_artifacts/run_20260216_090519/train_model/: model  train_metrics
examples/telecom-churn/local_artifacts/run_20260216_092047/log_run/: run_id
examples/telecom-churn/local_artifacts/run_20260216_092203/evaluate/: eval_metrics
examples/telecom-churn/local_artifacts/run_20260216_092203/log_run/: run_id
examples/telecom-churn/local_artifacts/run_20260216_092203/split_data/: test_set  train_set
examples/telecom-churn/local_artifacts/run_20260216_092203/train_model/: model  train_metrics
examples/telecom-churn/local_artifacts/run_20260216_092941/log_run/: run_id
examples/telecom-churn/local_artifacts/run_20260216_092941/train_model/: model
examples/telecom-churn/local_artifacts/run_20260216_094345/load_data/: raw_data
examples/telecom-churn/local_artifacts/run_20260216_094345/log_run/: run_id
examples/telecom-churn/local_artifacts/run_20260216_094705/apply_transforms/: transformed_data
examples/telecom-churn/local_artifacts/run_20260216_094705/load_scoring_data/: scoring_data
examples/telecom-churn/local_artifacts/run_20260216_094755/apply_transforms/: transformed_data
examples/telecom-churn/local_artifacts/run_20260216_094755/load_model/: model  model_metadata
examples/telecom-churn/local_artifacts/run_20260216_094755/predict/: prediction_probabilities  predictions
examples/telecom-churn/pipelines/: _base_churn.yaml  churn_gradient_boosting_v1.yaml  churn_logistic_v1.yaml  churn_sagemaker_v1.yaml  churn_serving_v1.yaml  churn_simple_v1.yaml
examples/telecom-churn/sample_data/: customers.csv  customers_to_score.csv
examples/telecom-churn/tests/: churn_serving_v1.test.yaml  churn_simple_v1.test.yaml
integration-test/: 01-setup-infra.sh  02-init-data.sh  03-mbt-init.sh  README.md  docker-compose.yml  run-test.sh
integration-test/generated_dags/: churn_demo_training_v1_dag.py  serving_churn_model_v1_dag.py  training_churn_model_v1_dag.py
integration-test/infra/airflow/: Dockerfile
integration-test/infra/k8s/: namespaces.yaml
integration-test/infra/k8s/airflow/: values.yaml
integration-test/infra/k8s/gitea/: values.yaml
integration-test/infra/k8s/h2o/: deployment.yaml  service.yaml
integration-test/infra/k8s/jupyterhub/: values.yaml
integration-test/infra/k8s/mbt-pipelines/: configmap.yaml  rbac.yaml
integration-test/infra/k8s/metabase/: deployment.yaml  ingress.yaml  service.yaml
integration-test/infra/k8s/mlflow/: deployment.yaml  ingress.yaml  service.yaml
integration-test/infra/k8s/monitoring/: prometheus-values.yaml
integration-test/infra/k8s/postgres/: values.yaml
integration-test/infra/k8s/seaweedfs/: init-buckets-job.yaml  values.yaml
integration-test/infra/k8s/woodpecker/: values.yaml
integration-test/infra/k8s/zot/: values.yaml
integration-test/infra/mbt-runner/: Dockerfile
integration-test/infra/mlflow/: Dockerfile
integration-test/infra/postgres/: generate_data.py  init.sql
integration-test/infra/seaweedfs/: init-buckets.sh
integration-test/overlays/: profiles.yaml  pyproject.toml  serving_churn_model_v1.yaml
integration-test/project/: profiles.yaml  pyproject.toml
integration-test/project/pipelines/: serving_churn_model_v1.yaml  training_churn_model_v1.yaml
integration-test/project/sample_data/: customers.csv  customers_to_score.csv  label_table.csv
mbt-airflow/: pyproject.toml
mbt-airflow/src/mbt_airflow/: __init__.py  orchestrator.py
mbt-core/: README.md  pyproject.toml
mbt-core/src/mbt/: __init__.py  __main__.py  cli.py
mbt-core/src/mbt/builtins/: env_secrets.py  local_connector.py  local_storage.py
mbt-core/src/mbt/config/: loader.py  profiles.py  schema.py
mbt-core/src/mbt/contracts/: data_connector.py  framework.py  model_registry.py  orchestrator.py  secrets.py  storage.py
mbt-core/src/mbt/core/: compiler.py  composition.py  context.py  dag.py  data.py  manifest.py  registry.py  runner.py  step_executor.py
mbt-core/src/mbt/observability/: __init__.py  logging.py  metrics.py
mbt-core/src/mbt/steps/: apply_transforms.py  base.py  drift_detection.py  encode.py  evaluate.py  feature_selection.py  join_tables.py  load_data.py  load_model.py  load_scoring_data.py  log_run.py  normalize.py  predict.py  publish.py  split_data.py  train_model.py  validate_data.py
mbt-core/src/mbt/testing/: __init__.py  assertions.py  fixtures.py
mbt-core/src/mbt/utils/: __init__.py  datagen.py  pipeline_templates.py  temporal.py
mbt-duckdb/: pyproject.toml
mbt-duckdb/src/mbt_duckdb/: __init__.py  connector.py
mbt-h2o/: README.md  pyproject.toml
mbt-h2o/src/mbt_h2o/: __init__.py  framework.py
mbt-mlflow/: README.md  pyproject.toml
mbt-mlflow/src/mbt_mlflow/: __init__.py  registry.py
mbt-postgres/: pyproject.toml
mbt-postgres/src/mbt_postgres/: __init__.py  connector.py
mbt-s3/: pyproject.toml
mbt-s3/src/mbt_s3/: __init__.py  storage.py
mbt-sagemaker/: README.md  pyproject.toml
mbt-sagemaker/src/mbt_sagemaker/: __init__.py  algorithms.py  exceptions.py  framework.py  s3_utils.py
mbt-sagemaker/tests/: test_algorithms.py  test_framework.py  test_s3_utils.py
mbt-sklearn/: README.md  pyproject.toml
mbt-sklearn/src/mbt_sklearn/: __init__.py  framework.py
mbt-snowflake/: pyproject.toml
mbt-snowflake/src/mbt_snowflake/: __init__.py  connector.py
(+3 files in other folders)
