[project]
name = "mbt-airflow"
version = "0.1.0"
description = "Airflow orchestrator adapter for MBT (Model Build Tool)"
requires-python = ">=3.10"
dependencies = [
    "mbt-core",
]

[project.entry-points."mbt.orchestrators"]
airflow = "mbt_airflow.orchestrator:AirflowOrchestrator"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
