[project]
name = "mbt-duckdb"
version = "0.1.0"
description = "DuckDB data connector adapter for MBT (Model Build Tool)"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "mbt-core",
]

[project.entry-points."mbt.data_connectors"]
duckdb = "mbt_duckdb.connector:DuckDBConnector"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
