[project]
name = "mbt-postgres"
version = "0.1.0"
description = "PostgreSQL data connector adapter for MBT (Model Build Tool)"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
    "pandas>=2.0.0",
    "mbt-core",
]

[project.entry-points."mbt.data_connectors"]
postgres = "mbt_postgres.connector:PostgresConnector"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
