[project]
name = "mbt-sagemaker"
version = "0.1.0"
description = "AWS SageMaker adapter for MBT (Model Build Tool)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26.0",
    "sagemaker>=2.150.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "moto>=4.0.0",  # AWS mocking
]

[project.entry-points."mbt.frameworks"]
sagemaker = "mbt_sagemaker.framework:SageMakerFramework"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
