[project]
name = "mbt-sklearn"
version = "0.1.0"
description = "scikit-learn adapter for MBT (Model Build Tool)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "joblib>=1.0.0",
]

[project.entry-points."mbt.frameworks"]
sklearn = "mbt_sklearn.framework:SklearnFramework"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
